--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Fernanda_</p>
+        <p class="lead">Eu sou Gisele_</p>
         <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+        <p>
+            Sou estudante do 3ºano do ensino médio, faço curso de programação.
+        </p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
@@ -114,8 +114,8 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
-                    <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
+                    <a href="https://gi14032008.github.io/minhas_leituras/">Ver projeto ao vivo</a>
+                    <a href="https://github.com/Gi14032008/minhas_leituras">Ver código do projeto</a>
                 </div>
             </div>
         </div>
@@ -159,9 +159,9 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
+                    <a href="https://gi14032008.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
                         vivo</a>
-                    <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
+                    <a href="https://github.com/Gi14032008/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
                         projeto</a>
                 </div>
             </div>
@@ -208,7 +208,7 @@
         <h2>Entre em contato</h2>
         <div>
             <i class="bi bi-github"></i>
-            <a href="https://github.com/femascheti">GitHub</a>
+            <a href="https://github.com/Gi14032008">GitHub</a>
         </div>
         <p class="my-5 text-center">© Copyright 2024. Produzido por Fernanda Mascheti</p>
     </footer>
