--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <img src="img/image.png" alt="avatar da Gisele" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Gisele_</p>
-        <h1>Eu ensino Programação</h1>
+        <h1>Eu gosto de ouvir musica</h1>
         <p>
-            Sou estudante do 3ºano do ensino médio, faço curso de programação.
+            Sou estudante do 3ºano do ensino médio, faço curso de programação.Gosto de desenhar e ler.
         </p>
-        <p>Minhas habilidades</p>
+        <p>Meus gostos</p>
         <div>
-            <p class="badge bg-secondary">HTML</p>
-            <p class="badge bg-secondary">CSS</p>
-            <p class="badge bg-secondary">JavaScript</p>
-            <p class="badge bg-secondary">Scratch</p>
+            <p class="badge bg-secondary"> sou tímida e muito legal</p>
+            <p class="badge bg-secondary">pop e rocK</p>
+            <p class="badge bg-secondary"> ficção e romance</p>
+            <p class="badge bg-secondary">A culpa é das estrelas </p>
         </div>
     </header>
     <main class="container mt-5">
