--- a/index.html
+++ b/index.html
@@ -68,11 +68,9 @@
                 <div class="card">
                     <img src="img/projeto-3.png" class="card-img-top" alt="Minha banda favorita">
                     <div class="card-body">
-                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
+                        <h5 class="card-title">chase atlantic: Banda australiana que tem como estilo ReB auternativo...
                         </h5>
-                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                            forma da Terra através de cenários dinâmicos e diálogos informativos.
+                        <p class="card-text">.Eu gosto dessa banda por que as musicas deles me trazem uma experiencia fantastica, combinando estilos unicos
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
