--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/image copy.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
                         <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
@@ -66,7 +66,7 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-3.png" class="card-img-top" alt="Minha banda favorita">
+                    <img src="img/image copy.png" class="card-img-top" alt="Minha banda favorita">
                     <div class="card-body">
                         <h5 class="card-title">chase atlantic: Banda australiana que tem como estilo ReB auternativo...
                         </h5>
