--- a/index.html
+++ b/index.html
@@ -48,12 +48,9 @@
                 <div class="card">
                     <img src="img/anime.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
+                        <h5 class="card-title">Eu sou a vilã Otome game
                             Artificial</h5>
-                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
-                            impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
-                            pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
-                            futuro da IA.</p>
+                        <p class="card-text">conta a história de Catarina Claes, uma jovem que, após bater a cabeça, se lembra de sua vida passada como uma otaku viciada em jogos otome. Ela percebe que reencarnou no mundo do jogo "Fortune Lover" como a vilã, destinada ao exílio ou à morte</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
                             o projeto</button>
                     </div>
