--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://gi14032008.github.io/minhas_leituras/">Ver projeto ao vivo</a>
-                    <a href="https://github.com/Gi14032008/minhas_leituras">Ver código do projeto</a>
+                    <a href="https://www.amazon.com.br/Culpa-%C3%89-das-Estrelas/dp/8580572266/">Ver projeto ao vivo</a>
                 </div>
             </div>
         </div>
