--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
                     <p>O projeto é uma aplicação educativa interativa focada em ensinar conceitos básicos de
                         astronomia. Utiliza uma série de scripts associados a diferentes atores (sprites) e
                         A expressão "into it" na música "Into It" da banda Chase Atlantic não tem uma tradução literal única, mas sim um significado que se refere a estar envolvido, interessado ou entregue a algo. No contexto da música, sugere uma intensa entrega a uma experiência, desejo ou situação. .</p>
-                    <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
+                    <img src="img/image copy.png" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
+                    <a href="https://www.youtube.com/watch?v=TkBi4hZlV8U/">Ver projeto ao vivo</a>
                 </div>
             </div>
         </div>
@@ -140,9 +140,9 @@
         <h2>Entre em contato</h2>
         <div>
             <i class="bi bi-github"></i>
-            <a href="https://github.com/Gi14032008">GitHub</a>
+            <a href="https://github.com/Gi14032008">Gih</a>
         </div>
-        <p class="my-5 text-center">© Copyright 2024. Produzido por Fernanda Mascheti</p>
+        <p class="my-5 text-center">© Copyright 2024. Produzido por Gisele Pereira </p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
